# flappy-bird

./: CMakeLists.txt  asset-manager.cpp  asset-manager.hpp  bird.cpp  bird.hpp  definitions.hpp  game-engine.cpp  game-engine.hpp  game-over-state.cpp  game-over-state.hpp  game-state.cpp  game-state.hpp  land.cpp  land.hpp  main-menu-state.cpp  main-menu-state.hpp  main.cpp  pipe.cpp  pipe.hpp  state-manager.hpp  state.hpp
